# ChipImage_public

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
imageProcessAlgor/: CMakeLists.txt  autoAdjustQuality.cpp  autoAdjustQuality.h  brightQuality.cpp  brightQuality.h  cutBaseLineDetection.cpp  cutBaseLineDetection.h  cutImageAlgr.cpp  cutImageAlgr.h  cutTraceDetection.cpp  cutTraceDetection.h  focusQuality.cpp  focusQuality.h  pixelSizeMeter.cpp  pixelSizeMeter.h  rotateTransform.cpp  rotateTransform.h  templateMatcher.cpp  templateMatcher.h
samples/cpp/: CMakeLists.txt  unit_test.cpp
samples/python/: calc_brightness.py  defectDetection_advance.py  defectDetection_base.py  mobilenet_test.py
samples/python/img_proc/: core.py
